--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Mi Empresa | Inicio</title>
-		<link rel="stylesheet" href="/normalize.css" />
+		<link rel="stylesheet" href="/Css/normalize.css" />
 		<link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="/Css/style.css" />
 	</head>
 	<!-- Rama Web En Gibub -->
 	<body>
